--- a/aplicacoes/gestao-pessoas/pom.xml
+++ b/aplicacoes/gestao-pessoas/pom.xml
@@ -251,7 +251,7 @@
 
 	</dependencies>
 	<build>
-		<finalName>gpa-pesquisa</finalName>
+		<finalName>gestao-pessoas</finalName>
 
 		<plugins>
 			<plugin>
