--- a/aplicacoes/gestao-pessoas/src/main/webapp/WEB-INF/web.xml
+++ b/aplicacoes/gestao-pessoas/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,18 @@
       <page-encoding>UTF-8</page-encoding>
     </jsp-property-group>
   </jsp-config>
+
+	<error-page>
+		<error-code>404</error-code>
+		<location>/404</location>
+	</error-page>
+	
+	<error-page>
+		<error-code>500</error-code>
+		<location>/500</location>
+    </error-page>
+  
+  
   <filter>
     <filter-name>httpMethodFilter</filter-name>
     <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
