--- a/aplicacoes/gestao-pessoas/src/main/resources/application.properties
+++ b/aplicacoes/gestao-pessoas/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.datasource.jndi-name=java:comp/env/gestao_pessoas
 spring.jpa.hibernate.ddl-auto=update
 
+ldap.url=ldap://172.18.0.15:389
+ldap.base=dc=quixada,dc=ufc,dc=br
+ldap.user=cn=admin_npi,ou=people_teste,dc=quixada,dc=ufc,dc=br
+ldap.password=!@admin_npi!@
+ldap.ou=ou=people_teste
+
