Refatoração de controller e consultas.

--- a/aplicacoes/gestao-pessoas/src/main/resources/application.properties
+++ b/aplicacoes/gestao-pessoas/src/main/resources/application.properties
@@ -6,4 +6,6 @@ ldap.base=dc=quixada,dc=ufc,dc=br
 ldap.user=cn=admin_npi,ou=people_teste,dc=quixada,dc=ufc,dc=br
 ldap.password=!@admin_npi!@
 ldap.ou=ou=people_teste
+spring.thymeleaf.cache: false
+spring.jpa.hibernate.naming_strategy: org.hibernate.cfg.EJB3NamingStrategy
 
