Padronizacao da jsp

--- a/aplicacoes/gestao-pessoas/src/main/resources/application.properties
+++ b/aplicacoes/gestao-pessoas/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.datasource.jndi-name=java:comp/env/gestao_pessoas
 spring.jpa.hibernate.ddl-auto=update
+spring.thymeleaf.cache: false
+spring.jpa.hibernate.naming_strategy: org.hibernate.cfg.EJB3NamingStrategy
 
 ldap.url=ldap://172.18.0.15:389
 ldap.base=dc=quixada,dc=ufc,dc=br
