--- a/aplicacoes/gestao-pessoas/pom.xml
+++ b/aplicacoes/gestao-pessoas/pom.xml
@@ -86,7 +86,11 @@
 			<artifactId>jasperreports</artifactId>
 			<version>4.5.1</version>
 		</dependency>
-
+	
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+		</dependency>
 	</dependencies>
 	
 	<build>
