--- a/aplicacoes/gestao-estagio/src/main/resources/application.properties
+++ b/aplicacoes/gestao-estagio/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.datasource.jndi-name=java:comp/env/gestao_pessoas
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
 ldap.url=ldap://172.18.0.15:389
 ldap.base=dc=quixada,dc=ufc,dc=br
 ldap.user=cn=admin_npi,ou=people_teste,dc=quixada,dc=ufc,dc=br
 ldap.password=!@admin_npi!@
 ldap.ou=ou=people_teste
+
 spring.jpa.hibernate.naming_strategy: org.hibernate.cfg.EJB3NamingStrategy
 spring.thymeleaf.cache: false
 
