--- a/aplicacoes/gestao-estagio/pom.xml
+++ b/aplicacoes/gestao-estagio/pom.xml
@@ -92,11 +92,27 @@
 			<artifactId>jasperreports</artifactId>
 			<version>4.5.1</version>
 		</dependency>
-	
+
+<!-- 		<dependency> -->
+<!-- 			<groupId>fonte</groupId> -->
+<!-- 			<artifactId>fonte</artifactId> -->
+<!-- 			<version>0</version> -->
+<!-- 			<scope>system</scope> -->
+<!-- 			<systemPath>${basedir}/lib/fonts.jar</systemPath> -->
+<!-- 		</dependency> -->
+
+		<dependency>
+		    <groupId>net.sf.jasperreports</groupId>
+		    <artifactId>jasperreports-fonts</artifactId>
+		    <version>6.0.0</version>
+		</dependency>
+		
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 		</dependency>
+
 	</dependencies>
 	
 	<build>
