--- a/aplicacoes/gestao-estagio/src/main/resources/application.properties
+++ b/aplicacoes/gestao-estagio/src/main/resources/application.properties
@@ -1,19 +1,19 @@
-spring.datasource.jndi-name=java:comp/env/gestao_pessoas
+spring.datasource.jndi-name=java:comp/env/gestao_pessoas2
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-ldap.url=ldap://172.18.0.15:389
+ldap.url=ldap://nevada.intranet:389
 ldap.base=dc=quixada,dc=ufc,dc=br
-ldap.user=cn=admin_npi,ou=people_teste,dc=quixada,dc=ufc,dc=br
-ldap.password=!@admin_npi!@
-ldap.ou=ou=people_teste
+ldap.user=cn=leitor-npi,dc=quixada,dc=ufc,dc=br
+ldap.password=!@leitor_ldap!@
+ldap.ou=ou=people
 
 spring.jpa.hibernate.naming_strategy: org.hibernate.cfg.EJB3NamingStrategy
 spring.thymeleaf.cache: false
 
-multipart.maxFileSize: 5MB
-multipart.maxRequestSize: 5MB
+multipart.maxFileSize: 15MB
+multipart.maxRequestSize: 15MB
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/gestao_pessoas_db
 #spring.datasource.username=postgres
