Configuração de time-out da sessão para 20 minutos.

--- a/aplicacoes/gestao-estagio/src/main/resources/application.properties
+++ b/aplicacoes/gestao-estagio/src/main/resources/application.properties
@@ -15,6 +15,9 @@ spring.thymeleaf.cache: false
 multipart.maxFileSize: 15MB
 multipart.maxRequestSize: 15MB
 
+server.session.timeout : 1200
+
+
 #spring.datasource.url=jdbc:postgresql://localhost:5432/gestao_estagio_db
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
