--- a/aplicacoes/gestao-estagio/src/main/resources/application.properties
+++ b/aplicacoes/gestao-estagio/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.datasource.jndi-name=java:comp/env/gestao_estagio
+spring.datasource.jndi-name=java:comp/env/gestao_estagio
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -16,8 +16,7 @@ multipart.maxFileSize: 5MB
 multipart.maxRequestSize: 5MB
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/gestao_estagio_db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/gestao_estagio_db
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-
