--- a/aplicacoes/gestao-estagio/src/main/resources/application.properties
+++ b/aplicacoes/gestao-estagio/src/main/resources/application.properties
@@ -16,7 +16,7 @@ multipart.maxFileSize: 5MB
 multipart.maxRequestSize: 5MB
 
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/gestao_estagio_db
+#spring.datasource.url=jdbc:postgresql://homologacaopostgres.quixada.ufc.br:5432/g_r
 #spring.datasource.username=postgres
-#spring.datasource.password=postgres
+#spring.datasource.password=!@homologacao#sistemas!@
 spring.datasource.driver-class-name=org.postgresql.Driver
