Correção do formulario reposicao Correção buscarFrequecencia estagio service

--- a/aplicacoes/gestao-estagio/src/main/resources/application.properties
+++ b/aplicacoes/gestao-estagio/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.jndi-name=java:comp/env/gestao_estagio
+#spring.datasource.jndi-name=java:comp/env/gestao_estagio
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -16,7 +16,7 @@ multipart.maxFileSize: 5MB
 multipart.maxRequestSize: 5MB
 
 
-#spring.datasource.url=jdbc:postgresql://homologacaopostgres.quixada.ufc.br:5432/g_r
-#spring.datasource.username=postgres
-#spring.datasource.password=!@homologacao#sistemas!@
+spring.datasource.url=jdbc:postgresql://homologacaopostgres.quixada.ufc.br:5432/g_r
+spring.datasource.username=postgres
+spring.datasource.password=!@homologacao#sistemas!@
 spring.datasource.driver-class-name=org.postgresql.Driver
