--- a/aplicacoes/gestao-estagio/src/main/resources/application.properties
+++ b/aplicacoes/gestao-estagio/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.thymeleaf.cache: false
 multipart.maxFileSize: 5MB
 multipart.maxRequestSize: 5MB
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/gestao_estagio_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/da
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
